[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["http-request", "window-close", "window-create", "window-set-title", "window-start-dragging"] }
http = "0.2.8"
rand = "0.8.5"
futures-util = "0.3.26"
tokio = { version = "1.25.0", features = ["net", "sync"] }
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
thiserror = "1.0.38"
jieba-rs = "0.6.7"
itertools = "0.10.5"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
